Add: the words are taken from the file Fix: the logic of working with words with repetitive letters